# lfi_project

./: .gitignore  3.3.10  README.md  cm.csh  cm.sh  cm_hypatia.sh  cm_locust.sh  cm_tursa.sh  cm_wilkes.sh  pkdgrav3_command_line_options.txt  reset_environment_wilkes.sh  set_environment.csh  set_environment.sh  set_environment_hypatia.sh  set_environment_locust.sh  set_environment_splinter.csh  set_environment_splinter.sh  set_environment_tursa.sh  set_environment_wilkes.sh
AVX_test/: avx_test.cpp  makefile
GowerStreetSims/: README.html  README.md
MPI_test/: jobfile  makefile  mpi_test.cpp
SMP_test/: cm_output_SMP.txt  cm_output_login.txt  diff.txt  settings_SMP_node  settings_login_node
cuda_check/: CMakeLists.txt  cm.csh  cuda_check.c
cuda_test/: README.md  cuda_job_script  cuda_job_script_splinter  cuda_job_script_tursa  cuda_test.cu  helper_cuda.h  makefile
data/: README.md
experiments/: experiment.par  job_script
nbodykit/: README.md  nbody_utility.py  set_environment.sh
pkdgrav3/: CMakeLists.txt  cudautil.cu  ewald.cxx  lightcone.cxx  master.c  output.c  pkd.c  pkd.h  simd.h  super_cmake.cmake
runs/: control.par
runs3A/: control.par  cuda_job_script_tursa  params_run_gs3_0.txt
runs3B/: cuda_job_script_tursa  params_run_gs3_1_first_line_deleted.txt  post_rundirectory_creation.sh
runsA/: README.md
runsC/: README.md  cuda_job_script_wilkes  params_run_1.txt
runsD/: README.md  params_run_1.txt
runsE/: README.md  params_run_2.txt
runsF/: README.md
runsG/: cuda_job_script_tursa  params_run_3.txt
runsI/: params_run_3.txt
runsJ/: params_run_4.txt  start_template.sh  wrapper.sh
runsK/: params_run_5.txt  start_template.sh
runsL/: control.par  params_run_6.txt  start.sh  start_template.sh
runsM/: cuda_job_script_wilkes  params_run_7.txt  start_template.sh
runsN/: params_run_8.txt  start_template.sh
runsO/: cuda_job_script_tursa  params_run_9.txt  start_template.sh
runsP/: params_run_10.txt  start_template.sh
runsQ/: params_run_11.txt  start_template.sh
runsR/: cuda_job_script_tursa  params_run_12.txt  start_template.sh
runsS/: control.par  cuda_job_script_tursa  params_run_13.txt  start_template.sh
runsT/: cuda_job_script_hypatia  cuda_job_script_tursa  jobs_monitor.sh  params_run_14.txt
runsU/: control.par  cuda_job_script_tursa  params_run_gs2_2.txt
runsV/: control.par  params_run_gs2_3.txt
runsV14/: README.md  control.par  params_run_gs2_V14_3.txt
runsVsm/: params_run_gs2_3.txt
runsW/: cuda_job_script_hypatia  params_run_gs2_lcdm_1.txt
runsWsm/: control.par  params_run_gs2_lcdm_1.txt
runsX/: params_run_gs2_general_wcdm_3.txt
scripts/: RenameAllSims.sh  RenameOneSim.sh  create_input_files.py  create_supercmake.py  cuda_job_script  cuda_job_script_hypatia  cuda_job_script_k80  cuda_job_script_splinter  cuda_job_script_splinter_k80  cuda_job_script_splinter_v100  cuda_job_script_tursa  cuda_job_script_v100  cuda_job_script_wilkes  cuda_job_script_wilkes_ampere  hdf5_editor.py  (+18 more)
small_test/: CMakeLists.txt  cm.sh  makefile  small_test.cpp
small_test_c/: CMakeLists.txt  cm.sh  foo.txt  foo_l.sh  foo_ld.txt  makefile  small_test.c
(+74 files in other folders)
